--- a/package.json
+++ b/package.json
@@ -5,15 +5,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "mocha"
   },
   "dependencies": {
-    "next": "12.0.8",
+    "@celo/contractkit": "^1.0.2",
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.8.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/nunito": "^4.5.1",
+    "framer-motion": "^4.1.17",
+    "ganache-cli": "^6.12.2",
+    "mocha": "^9.2.0",
+    "next": "^10.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "eslint-config-next": "^0.2.4"
   }
 }
